Update POM